--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.2",
+    "eslint": "8.57.0",
     "input-otp": "^1.2.4",
     "next": "14.2.1",
     "next-auth": "^5.0.0-beta.16",
@@ -62,10 +63,10 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
     "eslint-config-next": "14.2.1",
     "postcss": "^8",
     "prisma": "^5.12.1",
